Compiladores-E-Interpretes/mini-python/generated/miniPythonParser.py
# Generated from D:/Universidad/Compiladores_e_Interpretes/Compiladores-E-Interpretes/Compiladores-E-Interpretes/mini-python\miniPython.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class miniPythonParser ( Parser ):

    grammarFileName = "miniPython.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'='", "'('", "')'", "'['", 
                     "']'", "'~'", "':'", "'+'", "'*'", "'-'", "'/'", "'**'", 
                     "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'+='", 
                     "'-='", "'*='", "'/='", "'if'", "'then'", "'else'", 
                     "'while'", "'do'", "'let'", "'in'", "'begin'", "'end'", 
                     "'def'", "'len'", "'for'", "'return'", "'print'" ]

    symbolicNames = [ "<INVALID>", "COMA", "PyCOMA", "ASIGN", "PIZQ", "PDER", 
                      "CIZQ", "CDER", "VIR", "DOSPUNT", "MAS", "MULT", "MEN", 
                      "DIV", "POT", "MOD", "MENQUE", "MAYQUE", "MENQUEEQUAL", 
                      "MAYQUEEQUAL", "EQUALEQUAL", "MASEQUAL", "MENEQUAL", 
                      "MULTEQUAL", "DIVEQUAL", "IF", "THEN", "ELSE", "WHILE", 
                      "DO", "LET", "IN", "BEGIN", "END", "DEF", "LEN", "FOR", 
                      "RETURN", "PRINT", "INTEGER", "IDENTIFIER", "STRING", 
                      "FLOAT", "CHARCONTS", "COMENTLINEA", "COMENTMULTILINEA", 
                      "NEWLINE", "WS", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_defStatement = 2
    RULE_argList = 3
    RULE_moreArgs = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_returnStatement = 8
    RULE_printStatement = 9
    RULE_assignStatement = 10
    RULE_functionCallStatement = 11
    RULE_expressionStatement = 12
    RULE_sequence = 13
    RULE_moreStatements = 14
    RULE_expression = 15
    RULE_comparison = 16
    RULE_additionExpression = 17
    RULE_additionFactor = 18
    RULE_multiplicationExpression = 19
    RULE_multiplicationFactor = 20
    RULE_elementExpression = 21
    RULE_elementAccess = 22
    RULE_expressionList = 23
    RULE_moreExpressions = 24
    RULE_primitiveExpression = 25
    RULE_listExpression = 26

    ruleNames =  [ "program", "statement", "defStatement", "argList", "moreArgs", 
                   "ifStatement", "whileStatement", "forStatement", "returnStatement", 
                   "printStatement", "assignStatement", "functionCallStatement", 
                   "expressionStatement", "sequence", "moreStatements", 
                   "expression", "comparison", "additionExpression", "additionFactor", 
                   "multiplicationExpression", "multiplicationFactor", "elementExpression", 
                   "elementAccess", "expressionList", "moreExpressions", 
                   "primitiveExpression", "listExpression" ]

    EOF = Token.EOF
    COMA=1
    PyCOMA=2
    ASIGN=3
    PIZQ=4
    PDER=5
    CIZQ=6
    CDER=7
    VIR=8
    DOSPUNT=9
    MAS=10
    MULT=11
    MEN=12
    DIV=13
    POT=14
    MOD=15
    MENQUE=16
    MAYQUE=17
    MENQUEEQUAL=18
    MAYQUEEQUAL=19
    EQUALEQUAL=20
    MASEQUAL=21
    MENEQUAL=22
    MULTEQUAL=23
    DIVEQUAL=24
    IF=25
    THEN=26
    ELSE=27
    WHILE=28
    DO=29
    LET=30
    IN=31
    BEGIN=32
    END=33
    DEF=34
    LEN=35
    FOR=36
    RETURN=37
    PRINT=38
    INTEGER=39
    IDENTIFIER=40
    STRING=41
    FLOAT=42
    CHARCONTS=43
    COMENTLINEA=44
    COMENTMULTILINEA=45
    NEWLINE=46
    WS=47
    INDENT=48
    DEDENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramMPContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniPythonParser.StatementContext,i)




    def program(self):

        localctx = miniPythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = miniPythonParser.ProgramMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.statement()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniPythonParser.PIZQ) | (1 << miniPythonParser.CIZQ) | (1 << miniPythonParser.MEN) | (1 << miniPythonParser.IF) | (1 << miniPythonParser.WHILE) | (1 << miniPythonParser.DEF) | (1 << miniPythonParser.LEN) | (1 << miniPythonParser.FOR) | (1 << miniPythonParser.RETURN) | (1 << miniPythonParser.PRINT) | (1 << miniPythonParser.INTEGER) | (1 << miniPythonParser.IDENTIFIER) | (1 << miniPythonParser.STRING) | (1 << miniPythonParser.FLOAT) | (1 << miniPythonParser.CHARCONTS) | (1 << miniPythonParser.NEWLINE))) != 0):
                self.state = 55
                self.statement()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatementMPContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def defStatement(self):
            return self.getTypedRuleContext(miniPythonParser.DefStatementContext,0)

        def ifStatement(self):
            return self.getTypedRuleContext(miniPythonParser.IfStatementContext,0)

        def returnStatement(self):
            return self.getTypedRuleContext(miniPythonParser.ReturnStatementContext,0)

        def printStatement(self):
            return self.getTypedRuleContext(miniPythonParser.PrintStatementContext,0)

        def whileStatement(self):
            return self.getTypedRuleContext(miniPythonParser.WhileStatementContext,0)

        def forStatement(self):
            return self.getTypedRuleContext(miniPythonParser.ForStatementContext,0)

        def assignStatement(self):
            return self.getTypedRuleContext(miniPythonParser.AssignStatementContext,0)

        def functionCallStatement(self):
            return self.getTypedRuleContext(miniPythonParser.FunctionCallStatementContext,0)

        def expressionStatement(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionStatementContext,0)




    def statement(self):

        localctx = miniPythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            localctx = miniPythonParser.StatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 61
                self.defStatement()
                pass

            elif la_ == 2:
                self.state = 62
                self.ifStatement()
                pass

            elif la_ == 3:
                self.state = 63
                self.returnStatement()
                pass

            elif la_ == 4:
                self.state = 64
                self.printStatement()
                pass

            elif la_ == 5:
                self.state = 65
                self.whileStatement()
                pass

            elif la_ == 6:
                self.state = 66
                self.forStatement()
                pass

            elif la_ == 7:
                self.state = 67
                self.assignStatement()
                pass

            elif la_ == 8:
                self.state = 68
                self.functionCallStatement()
                pass

            elif la_ == 9:
                self.state = 69
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_defStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefStatementMPContext(DefStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.DefStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(miniPythonParser.DEF, 0)
        def IDENTIFIER(self):
            return self.getToken(miniPythonParser.IDENTIFIER, 0)
        def PIZQ(self):
            return self.getToken(miniPythonParser.PIZQ, 0)
        def argList(self):
            return self.getTypedRuleContext(miniPythonParser.ArgListContext,0)

        def PDER(self):
            return self.getToken(miniPythonParser.PDER, 0)
        def DOSPUNT(self):
            return self.getToken(miniPythonParser.DOSPUNT, 0)
        def sequence(self):
            return self.getTypedRuleContext(miniPythonParser.SequenceContext,0)




    def defStatement(self):

        localctx = miniPythonParser.DefStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defStatement)
        try:
            localctx = miniPythonParser.DefStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(miniPythonParser.DEF)
            self.state = 73
            self.match(miniPythonParser.IDENTIFIER)
            self.state = 74
            self.match(miniPythonParser.PIZQ)
            self.state = 75
            self.argList()
            self.state = 76
            self.match(miniPythonParser.PDER)
            self.state = 77
            self.match(miniPythonParser.DOSPUNT)
            self.state = 78
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_argList

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArgListMPContext(ArgListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.ArgListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(miniPythonParser.IDENTIFIER, 0)
        def moreArgs(self):
            return self.getTypedRuleContext(miniPythonParser.MoreArgsContext,0)




    def argList(self):

        localctx = miniPythonParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argList)
        try:
            localctx = miniPythonParser.ArgListMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [miniPythonParser.IDENTIFIER]:
                self.state = 80
                self.match(miniPythonParser.IDENTIFIER)
                self.state = 81
                self.moreArgs()
                pass
            elif token in [miniPythonParser.PDER]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoreArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_moreArgs

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MoreArgsMPContext(MoreArgsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.MoreArgsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(miniPythonParser.COMA)
            else:
                return self.getToken(miniPythonParser.COMA, i)
        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miniPythonParser.IDENTIFIER)
            else:
                return self.getToken(miniPythonParser.IDENTIFIER, i)



    def moreArgs(self):

        localctx = miniPythonParser.MoreArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_moreArgs)
        self._la = 0 # Token type
        try:
            localctx = miniPythonParser.MoreArgsMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miniPythonParser.COMA:
                self.state = 85
                self.match(miniPythonParser.COMA)
                self.state = 86
                self.match(miniPythonParser.IDENTIFIER)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_ifStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStatementMPContext(IfStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.IfStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(miniPythonParser.IF, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def DOSPUNT(self, i:int=None):
            if i is None:
                return self.getTokens(miniPythonParser.DOSPUNT)
            else:
                return self.getToken(miniPythonParser.DOSPUNT, i)
        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPythonParser.SequenceContext)
            else:
                return self.getTypedRuleContext(miniPythonParser.SequenceContext,i)

        def ELSE(self):
            return self.getToken(miniPythonParser.ELSE, 0)



    def ifStatement(self):

        localctx = miniPythonParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        try:
            localctx = miniPythonParser.IfStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 92
                self.match(miniPythonParser.IF)
                self.state = 93
                self.expression()
                self.state = 94
                self.match(miniPythonParser.DOSPUNT)
                self.state = 95
                self.sequence()
                self.state = 96
                self.match(miniPythonParser.ELSE)
                self.state = 97
                self.match(miniPythonParser.DOSPUNT)
                self.state = 98
                self.sequence()
                pass

            elif la_ == 2:
                self.state = 100
                self.match(miniPythonParser.IF)
                self.state = 101
                self.expression()
                self.state = 102
                self.match(miniPythonParser.DOSPUNT)
                self.state = 103
                self.sequence()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_whileStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementMPContext(WhileStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.WhileStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(miniPythonParser.WHILE, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def DOSPUNT(self):
            return self.getToken(miniPythonParser.DOSPUNT, 0)
        def sequence(self):
            return self.getTypedRuleContext(miniPythonParser.SequenceContext,0)




    def whileStatement(self):

        localctx = miniPythonParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            localctx = miniPythonParser.WhileStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(miniPythonParser.WHILE)
            self.state = 108
            self.expression()
            self.state = 109
            self.match(miniPythonParser.DOSPUNT)
            self.state = 110
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_forStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ForStatementMPContext(ForStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.ForStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(miniPythonParser.FOR, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def IN(self):
            return self.getToken(miniPythonParser.IN, 0)
        def expressionList(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionListContext,0)

        def DOSPUNT(self):
            return self.getToken(miniPythonParser.DOSPUNT, 0)
        def sequence(self):
            return self.getTypedRuleContext(miniPythonParser.SequenceContext,0)




    def forStatement(self):

        localctx = miniPythonParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            localctx = miniPythonParser.ForStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(miniPythonParser.FOR)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(miniPythonParser.IN)
            self.state = 115
            self.expressionList()
            self.state = 116
            self.match(miniPythonParser.DOSPUNT)
            self.state = 117
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_returnStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReturnStatementMPContext(ReturnStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.ReturnStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(miniPythonParser.RETURN, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def NEWLINE(self):
            return self.getToken(miniPythonParser.NEWLINE, 0)



    def returnStatement(self):

        localctx = miniPythonParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            localctx = miniPythonParser.ReturnStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(miniPythonParser.RETURN)
            self.state = 120
            self.expression()
            self.state = 121
            self.match(miniPythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_printStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintStatementMPContext(PrintStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.PrintStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(miniPythonParser.PRINT, 0)
        def PIZQ(self):
            return self.getToken(miniPythonParser.PIZQ, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def PDER(self):
            return self.getToken(miniPythonParser.PDER, 0)
        def NEWLINE(self):
            return self.getToken(miniPythonParser.NEWLINE, 0)



    def printStatement(self):

        localctx = miniPythonParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStatement)
        try:
            localctx = miniPythonParser.PrintStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(miniPythonParser.PRINT)
            self.state = 124
            self.match(miniPythonParser.PIZQ)
            self.state = 125
            self.expression()
            self.state = 126
            self.match(miniPythonParser.PDER)
            self.state = 127
            self.match(miniPythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_assignStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStatementMPContext(AssignStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.AssignStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(miniPythonParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionContext,0)

        def NEWLINE(self):
            return self.getToken(miniPythonParser.NEWLINE, 0)
        def ASIGN(self):
            return self.getToken(miniPythonParser.ASIGN, 0)
        def MASEQUAL(self):
            return self.getToken(miniPythonParser.MASEQUAL, 0)
        def MENEQUAL(self):
            return self.getToken(miniPythonParser.MENEQUAL, 0)



    def assignStatement(self):

        localctx = miniPythonParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignStatement)
        self._la = 0 # Token type
        try:
            localctx = miniPythonParser.AssignStatementMPContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(miniPythonParser.IDENTIFIER)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniPythonParser.ASIGN) | (1 << miniPythonParser.MASEQUAL) | (1 << miniPythonParser.MENEQUAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 131
            self.expression()
            self.state = 132
            self.match(miniPythonParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniPythonParser.RULE_functionCallStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionCallStatementMPContext(FunctionCallStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniPythonParser.FunctionCallStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primitiveExpression(self):
            return self.getTypedRuleContext(miniPythonParser.PrimitiveExpressionContext,0)

        def PIZQ(self):
            return self.getToken(miniPythonParser.PIZQ, 0)
        def expressionList(self):
            return self.getTypedRuleContext(miniPythonParser.ExpressionListContext,0)

        def PDER(self):
            return self.getToken(miniPythonParser.PDER, 0)
        def NEWLINE(self):
            return self.getToken(miniPythonParser.NEWLINE, 0)



    def functionCallStatement(self):
